intial header structure

--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/stylesheet.css">
-    <title>Work in progress</title>
+    <title>Landing page</title>
 </head>
 
 <body>
-    <div class="title">Work in progress</div>
+    <div class="header">
+        <div class="header upper">
+            <div class="header logo">Header Logo</div>
+            <div class="header links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header content">
+            <div>
+                <div class="header content title">This website is awesome</div>
+                <div class="header content text">This website has some subtext that goes there under the main title.
+                    It's a smaller font and the color is lower contrast.</div>
+                <button class="header content button">Sign up</button>
+            </div>
+            <div class="header content image">
+                
+            </div>
+        </div>
+    </div>
+    <div class="some-random-info">
+
+    </div>
+
 </body>
 
 </html>
