--- a/index.html
+++ b/index.html
@@ -10,32 +10,24 @@
 
 <body>
     <div class="header">
-        <div class="header upper">
-            <div class="header logo">Header Logo</div>
-            <div class="header links">
-                <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
-            </div>
+        <div class="content nav">
+            <div class="logo">Header Logo</div>
+            <ul class="links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
-        <div class="header content">
-            <div>
-                <div class="header content title">This website is awesome</div>
-                <div class="header content text">This website has some subtext that goes there under the main title.
+        <div class="content header">
+            <div class="header-text-container">
+                <div class="title">This website is awesome</div>
+                <div class="subtext">This website has some subtext that goes there under the main title.
                     It's a smaller font and the color is lower contrast.</div>
-                <button class="header content button">Sign up</button>
+                <button class="signup-button">Sign up</button>
             </div>
-            <div class="header content image">
-                
-            </div>
+            <div class="placeholder-image">This is an image placeholder</div>
         </div>
     </div>
-    <div class="some-random-info">
-
-    </div>
-
 </body>
 
 </html>
