--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
                 <div class="title">This website is awesome</div>
                 <div class="subtext">This website has some subtext that goes there under the main title.
                     It's a smaller font and the color is lower contrast.</div>
-                <button class="signup-button">Sign up</button>
+                <button>Sign up</button>
             </div>
-            <div class="placeholder-image">This is an image placeholder</div>
+            <div class="placeholder-image">
+                <div>this is an image placeholder</div>
+            </div>
         </div>
     </div>
 </body>
