structure of the page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="content header">
             <div class="header-text-container">
-                <div class="title">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes there under the main title.
+                <div class="header-title">This website is awesome</div>
+                <div class="subtext header">This website has some subtext that goes there under the main title.
                     It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
@@ -30,6 +30,53 @@
             </div>
         </div>
     </div>
+    <div class="random-information">
+        <div class="content">
+            <div class="title-information">Some random information.</div>
+            <div class="image-grid">
+                <div class="item">
+                    <div class="image-blue-border">IMAGE</div>
+                    <div class="subtext">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="item">
+                    <div class="image-blue-border">IMAGE</div>
+                    <div class="subtext">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="item">
+                    <div class="image-blue-border">IMAGE</div>
+                    <div class="subtext">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="item">
+                    <div class="image-blue-border">IMAGE</div>
+                    <div class="subtext">This is some subtext under an illustration or image.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="content">
+            <div class="quote-text">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people actually read it.
+                Who knows? All I know is that it looks nice.
+            </div>
+            <div class="quote-author">
+                - Thor, God of Thunder
+            </div>
+        </div>
+    </div>
+    <div class="call-to-action">
+        <div class="content">
+            <div class="call-to-action-card">
+                <div>
+                    <h1>Call to action! It's time!</h1>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">Copyright ©&nbsp<b><a href="https://www.theodinproject.com" target="_blank">The Odin Project 2023</a></b></div>
 </body>
 
 </html>
