make quote and colors for call to action section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="call-to-action-card">
                 <div>
                     <h1>Call to action! It's time!</h1>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <div class="subtext">Sign up for our product by clicking that button right over there!</div>
                 </div>
                 <button class="">Sign up</button>
             </div>
