finish call to action sectino

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <div class="content">
             <div class="call-to-action-card">
                 <div>
-                    <h1>Call to action! It's time!</h1>
-                    <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+                    <h1 class="call-to-action-text">Call to action! It's time!</h1>
+                    <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button class="">Sign up</button>
+                <button class="in-card-button">Sign up</button>
             </div>
         </div>
     </div>
