complete random information section

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <div class="title-information">Some random information.</div>
             <div class="image-grid">
                 <div class="item">
-                    <div class="image-blue-border">IMAGE</div>
+                    <div class="image-blue-border"></div>
                     <div class="subtext">This is some subtext under an illustration or image.</div>
                 </div>
                 <div class="item">
-                    <div class="image-blue-border">IMAGE</div>
+                    <div class="image-blue-border"></div>
                     <div class="subtext">This is some subtext under an illustration or image.</div>
                 </div>
                 <div class="item">
-                    <div class="image-blue-border">IMAGE</div>
+                    <div class="image-blue-border"></div>
                     <div class="subtext">This is some subtext under an illustration or image.</div>
                 </div>
                 <div class="item">
-                    <div class="image-blue-border">IMAGE</div>
+                    <div class="image-blue-border"></div>
                     <div class="subtext">This is some subtext under an illustration or image.</div>
                 </div>
             </div>
